Add container name as variable

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -7,6 +7,7 @@ resource_group_name_prefix = "my-portfolio"
 
 # Storage Account Configuration
 storage_account_name = "mystaticwebsite123"
+storage_container_name = "$web"
 
 # App Service Configuration
 app_service_plan_name = "my-app-service-plan"
